fixed alignment and poisition of top section

--- a/src/components/CTA/CTA.less
+++ b/src/components/CTA/CTA.less
@@ -10,8 +10,12 @@
 
   .mq(@bp-desktop, {
     flex-direction: row;
-    align-items: center;
-    gap: .get-clamp(2rem, 7.5rem, 65rem, 81.25rem)[];
-    margin-top: 1.5rem;
+    justify-content: center;
+    gap: .get-clamp(2rem, 6rem, 65rem, 81.25rem)[];
+    margin-top: 1.75rem;
+
+    & * {
+      flex: 1;
+    }
   });
 }
