--- a/src/components/Calculator/Calculator.less
+++ b/src/components/Calculator/Calculator.less
@@ -9,9 +9,11 @@
   border-radius: 1rem;
   box-shadow: 1rem 2rem 3.5rem 0 rgba(143, 174, 207, 0.25);
 
-  .mq(@bp-desktop, {
-    min-width: .get-clamp(32rem, 35.25rem, 62.5rem, 68.75rem)[];
-  });
+  &.metric {
+    .mq(@bp-desktop, {
+      margin-bottom: 7.25rem;
+    });
+  }
 }
 
 .radio {
@@ -20,8 +22,8 @@
 
   &__label {
     flex: 1;
-
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
     gap: 1.1rem;
     cursor: pointer;
@@ -31,17 +33,22 @@
     display: inline-block;
     height: 1.94rem;
     aspect-ratio: 1 / 1;
-    outline: 0.0625rem solid @clr-borders;
+    border: 0.0625rem solid @clr-borders;
     border-radius: 50%;
   }
 
   &__label:hover > &__circle {
-    outline-color: @clr-blue;
+    border-color: @clr-blue;
   }
 
   &__input:checked + &__circle {
     background-color: @clr-blue;
     border: 0.5rem solid lighten(@clr-blue, 35%);
+  }
+
+  &__input:focus-visible + &__circle {
+    outline: 0.15rem solid black;
+    outline-offset: 0.22rem;
   }
 }
 
