--- a/src/components/Explanation/Explanation.less
+++ b/src/components/Explanation/Explanation.less
@@ -19,7 +19,6 @@
   });
 
   .mq(@bp-desktop, {
-    margin-top: 10rem;
     gap: 8rem;
   });
 
